[tool.poetry]
name = "photo-share"
version = "0.1.0"
description = ""
authors = ["ivcoder <vank300828@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
